--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #82813d;
             text-align: center;
             padding: 50px;
-            overflow: hidden;
+			
         }
 
         h1 {
@@ -61,6 +61,7 @@
             max-width: 300px;
             margin-left: auto;
             margin-right: auto;
+			margin-bottom: 15px;
             text-align: left;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
@@ -103,7 +104,7 @@
 <body>
 
     <h1>Fart Tunes</h1>
-
+	
     <div class="keyboard-row">
         <button id="playFart1" class="keyboard-button">1</button>
         <button id="playFart2" class="keyboard-button">2</button>
@@ -135,7 +136,7 @@
         <label for="panControl">Stereo Panning:</label>
         <input type="range" id="panControl" min="-1" max="1" step="0.1" value="0">
     </div>
-
+	<img src="images/logo.png" style="width : 100px; height: auto;" >
     <script>
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
         
@@ -231,6 +232,5 @@
             button.addEventListener('click', () => playSoundWithEffects(i));
         }
     </script>
-
 </body>
 </html>
